// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`View Field Resolver - Successful object metadata identifier update side effect on view field Should not allow creating a view field with a position lower than the label identifier view field 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View field position cannot be lower than label identifier view field position",
              "userFriendlyMessage": "View field position cannot be lower than label identifier view field position",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 viewField",
    "summary": {
      "totalErrors": 1,
      "viewField": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating view fields",
  "name": "GraphQLError",
}
`;

exports[`View Field Resolver - Successful object metadata identifier update side effect on view field Should not allow deleting a label identifier view field 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Label identifier view field cannot be deleted",
              "userFriendlyMessage": "Label identifier view field cannot be deleted",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 viewField",
    "summary": {
      "totalErrors": 1,
      "viewField": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while deleting view field",
  "name": "GraphQLError",
}
`;

exports[`View Field Resolver - Successful object metadata identifier update side effect on view field Should not allow destroying a label identifier view field 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Label identifier view field cannot be deleted",
              "userFriendlyMessage": "Label identifier view field cannot be deleted",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "delete",
        },
      ],
    },
    "message": "Validation failed for 1 viewField",
    "summary": {
      "totalErrors": 1,
      "viewField": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while deleting view field",
  "name": "GraphQLError",
}
`;

exports[`View Field Resolver - Successful object metadata identifier update side effect on view field Should not allow updating a label identifier view field visibility to false 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Label identifier view field has to be visible",
              "userFriendlyMessage": "Label identifier view field has to be visible",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 viewField",
    "summary": {
      "totalErrors": 1,
      "viewField": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while updating view field",
  "name": "GraphQLError",
}
`;

exports[`View Field Resolver - Successful object metadata identifier update side effect on view field Should not allow updating labelIdentifier view field with a position higher than existing other view field 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Label identifier view field has to be in the lowest position",
              "userFriendlyMessage": "Label identifier view field has to be in the lowest position",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 viewField",
    "summary": {
      "totalErrors": 1,
      "viewField": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while updating view field",
  "name": "GraphQLError",
}
`;
